# solme

./: .gitignore  .oxfmtrc.json  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-04fa600d6b01e69ad70c00d0c9d31056f30155e5f58b023cf5832b4a784c6a20.json  query-0628ac9f822fec6b37bd3ffe63e5b13d1c26a55d37fc75c4c4bc75c5e6f920e1.json  query-14286987b9c2216f0687c6a5a5eb9eca49fa3f596a484bb06357c9ee36340d70.json  query-154d8202e0221489e22997093db4b22524ff0163d7d0d4136add6ef736c1c752.json  query-20b6beab5570c2875e390a137521ce7947bb740d92bdb80dff51f267d931be75.json  query-313ed99c4bd4c1b6a14465c956d902ff00f449056c43288df3f56e1b3d975acc.json  query-3749cdba3dc18fcbcd5b504619cb269b406aa2ebd235dad7d716b62ab77c5312.json  query-3b7ce44c7d8436057f0775ed6084803a4b2866a7374926d66e2fef5e33f24b6d.json  query-4bc5ca288775bed82a26ccb75ad5a155fd53c94a47a8d898fd413ecf75c64ea0.json  query-527754e4295da081e9b7ee9c55b1efec770bc8c5373ee53374f4040d55458e2f.json  query-59ba9032b1b180a92b88913e5e0a8a0c1b63c6b9e8b2d5b0c64a6994af56f5f7.json  query-682600dee31b6709606108e264e77320693fe45a8285b4eacc096cec5d7c2c0d.json  query-68f95e24e7cd64f8a4271a0b1a635f5b29d0351e980269d86195503419104f3e.json  query-763ba392087121bca3b7e7059f5b948ef4de30e390ea55df68121d324bf5f506.json  query-84930413b96569f99936eee1895b5788b14610affb39145c307b3d990c04a768.json  query-95ee0c9bb5b7ebb401ec866862a369fbd87b54c8e01d1c2cc51bcd5f712d54a2.json  query-b45aec6db295e4b5af4786d2e208ed396d1872fbf75c5b2fedcf5746f8eaa2e1.json  query-c082b56baa60c9b25d487009ef3df6d17e3a0386bf52914642566dcc9a8a25a7.json  query-c7a61417a9cfb04a069239bda3e2dc1e677a619272c59bf6217989cb7a5cbd26.json  query-c99280fd0172f1e135ef0479772268d4498233d219e3520be4a1f213eea36d81.json  (+5 more)
(+90 files in other folders)
