[package]
name = "solme"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Application
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

# Async
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "query",
  "rustls",
  "webpki-roots",
] }

# Database
sqlx = { version = "0.9", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }

# Identifiers and hashing
md5 = "0.8"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }

# Audio
libc = "0.2"
libmpv2 = "6"

# Credentials
keyring-core = "1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", default-features = false, features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.1", default-features = false }
